Add Travis-CI webhook

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,11 @@ script: msbuild /p:Configuration=Mono BrawlCrateNext.sln
 os:
   - linux
   - osx
+after_success:
+  - wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
+  - chmod +x send.sh
+  - ./send.sh success $WEBHOOK_URL
+after_failure:
+  - wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
+  - chmod +x send.sh
+  - ./send.sh failure $WEBHOOK_URL
