Fix travis webhook to use the new name of "TravisCIDiscordHook.sh" rather than "send.sh"

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ os:
   - osx
 after_success:
   - wget https://raw.githubusercontent.com/soopercool101/BrawlCrateNext/master/TravisCIDiscordHook.sh
-  - chmod +x send.sh
-  - ./send.sh success $WEBHOOK_URL
+  - chmod +x TravisCIDiscordHook.sh
+  - ./TravisCIDiscordHook.sh success $WEBHOOK_URL
 after_failure:
   - wget https://raw.githubusercontent.com/soopercool101/BrawlCrateNext/master/TravisCIDiscordHook.sh
-  - chmod +x send.sh
-  - ./send.sh failure $WEBHOOK_URL
+  - chmod +x TravisCIDiscordHook.sh
+  - ./TravisCIDiscordHook.sh failure $WEBHOOK_URL
