--- a/Updater/Updater.csproj
+++ b/Updater/Updater.csproj
@@ -143,6 +143,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition=" '$(Configuration)'!='Mono' ">
-    <Exec Command="RD /S /Q &quot;$(TargetDir)&quot;" />
+    <Exec Command="if not '$(ConfigurationName)' == 'Debug' (&#xD;&#xA;  RD /S /Q &quot;$(TargetDir)&quot;&#xD;&#xA;)" />
   </Target>
 </Project>
