--- a/BrawlLib/BrawlLib.csproj
+++ b/BrawlLib/BrawlLib.csproj
@@ -585,6 +585,11 @@ BrawlLib Copyright © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie, Sammi
     <EmbeddedResource Update="System\Windows\Forms\EditRSARFileDialog.resx">
       <DependentUpon>EditRSARFileDialog.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Update="System\Windows\Forms\Moveset\ScriptEditor.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ScriptEditor.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>System.Windows.Forms</CustomToolNamespace>
+    </EmbeddedResource>
     <EmbeddedResource Update="System\Windows\Forms\Section Editor\FormFind.resx">
       <DependentUpon>FormFind.cs</DependentUpon>
     </EmbeddedResource>
