--- a/Updater/Updater.csproj
+++ b/Updater/Updater.csproj
@@ -138,6 +138,7 @@
     <PackageReference Include="Octokit" Version="0.32.0" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="WindowsBase" />
