Revert "Change way that discord RPC settings are saved (more optimized)"
This reverts commit 15173740c2f6d9c04d6079851b8a5383494051c9.

--- a/BrawlCrate/Properties/Settings.settings
+++ b/BrawlCrate/Properties/Settings.settings
@@ -1,5 +1,7 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="BrawlCrate.Properties" GeneratedClassName="Settings">
+
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)"
+              GeneratedClassNamespace="BrawlCrate.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="UpdateSettings" Type="System.Boolean" Scope="User">
@@ -59,8 +61,9 @@
     <Setting Name="DiscordRPCEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="DiscordRPCNameType" Type="BrawlCrate.Discord.DiscordSettings.ModNameType" Scope="User">
-      <Value Profile="(Default)">BrawlCrate.Discord.DiscordSettings.ModNameType.Disabled</Value>
+    <Setting Name="DiscordRPCNameType" Type="System.Nullable&lt;BrawlCrate.Discord.DiscordSettings.ModNameType&gt;"
+             Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="DiscordRPCNameCustom" Type="System.String" Scope="User">
       <Value Profile="(Default)">My Mod</Value>
@@ -72,9 +75,6 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="BuildPath" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="DisabledLoaders" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
