API Loaders can now be loaded from subdirectories. Finalize support for Loader-to-loader disabling

--- a/BrawlCrate/Properties/Settings.settings
+++ b/BrawlCrate/Properties/Settings.settings
@@ -68,7 +68,7 @@
     <Setting Name="BuildPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="DisabledLoaders" Type="System.Collections.Specialized.StringCollection" Scope="User">
+    <Setting Name="DisabledAPILoadersList" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
