Add setting to change the default background color for Model Viewers

--- a/BrawlLib/Properties/Settings.settings
+++ b/BrawlLib/Properties/Settings.settings
@@ -38,5 +38,8 @@
     <Setting Name="ContextualLoopAudio" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ContextualLoopAnimation" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
