--- a/BrawlCrate/BrawlCrate.csproj
+++ b/BrawlCrate/BrawlCrate.csproj
@@ -19,16 +19,16 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <AssemblyTitle>BrawlCrate v0.30 Hotfix 3</AssemblyTitle>
+    <AssemblyTitle>BrawlCrate v0.30 Hotfix 4</AssemblyTitle>
     <Product>BrawlCrate</Product>
     <Description>This program is provided as-is without any warranty, implied or otherwise. By using this program, the end user agrees to take full responsibility regarding its proper and lawful use. The authors/hosts/distributors cannot be held responsible for any damage resulting in the use of this program, nor can they be held accountable for the manner in which it is used.</Description>
     <Copyright>
-      Copyright © 2018 - 2019 soopercool101, MarioDox, Syvkal
+      Copyright © 2018 - 2019 soopercool101, STulling, Onium
       BrawlBox Copyright © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie, Sammi Husky
       Super Smash Bros. Brawl © 2008 Nintendo and HAL Laboratory
     </Copyright>
-    <AssemblyVersion>0.30.0.3</AssemblyVersion>
-    <FileVersion>0.30.0.3</FileVersion>
+    <AssemblyVersion>0.30.0.4</AssemblyVersion>
+    <FileVersion>0.30.0.4</FileVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Platforms>AnyCPU;x64;x86</Platforms>
     <Configurations>Debug;Release;Mono;Canary;Documentation</Configurations>
@@ -160,8 +160,8 @@
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>BrawlCrate.Program</StartupObject>
-    <Version>30.0.3</Version>
-    <Authors>soopercool101, MarioDox, Syvkal, Bryan Moulton, BlackJax96, libertyernie, Sammi Husky</Authors>
+    <Version>30.0.4</Version>
+    <Authors>soopercool101, STulling, Onium, Bryan Moulton, BlackJax96, libertyernie, Sammi Husky</Authors>
     <Company>BrawlCrate</Company>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
