--- a/BrawlLib/BrawlLib.csproj
+++ b/BrawlLib/BrawlLib.csproj
@@ -18,12 +18,12 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <TargetFramework>net472</TargetFramework>
-    <AssemblyTitle>BrawlCrateLib v0.30 Hotfix 1</AssemblyTitle>
+    <AssemblyTitle>BrawlCrateLib v0.30 Hotfix 4</AssemblyTitle>
     <Product>BrawlCrateLib</Product>
-    <Copyright>Copyright © 2018 - 2019 soopercool101, MarioDox, Syvkal
+    <Copyright>Copyright © 2018 - 2019 soopercool101, STulling, Onium
 BrawlLib Copyright © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie, Sammi Husky</Copyright>
-    <AssemblyVersion>0.30.0.1</AssemblyVersion>
-    <FileVersion>0.30.0.1</FileVersion>
+    <AssemblyVersion>0.30.0.4</AssemblyVersion>
+    <FileVersion>0.30.0.4</FileVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Platforms>AnyCPU;x64;x86</Platforms>
     <Configurations>Debug;Release;Mono;Canary;Documentation</Configurations>
@@ -185,8 +185,8 @@ BrawlLib Copyright © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie, Sammi
     <PostBuildEvent />
     <PackageId>BrawlCrateLib</PackageId>
     <Company>BrawlCrateLib</Company>
-    <Authors>soopercool101, MarioDox, Syvkal, Bryan Moulton, BlackJax96, libertyernie, Sammi Husky</Authors>
-    <Version>27.0.0</Version>
+    <Authors>soopercool101, STulling, Onium, Bryan Moulton, BlackJax96, libertyernie, Sammi Husky</Authors>
+    <Version>30.0.4</Version>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="CustomLists\FighterList.txt" />
