--- a/BrawlCrate/BrawlCrate.csproj
+++ b/BrawlCrate/BrawlCrate.csproj
@@ -23,7 +23,7 @@
     <Product>BrawlCrate</Product>
     <Description>This program is provided as-is without any warranty, implied or otherwise. By using this program, the end user agrees to take full responsibility regarding its proper and lawful use. The authors/hosts/distributors cannot be held responsible for any damage resulting in the use of this program, nor can they be held accountable for the manner in which it is used.</Description>
     <Copyright>
-      Copyright © 2018 - 2019 soopercool101, STulling, Onium
+      Copyright © 2018 - 2019 soopercool101, Simon381, Onium
       BrawlBox Copyright © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie, Sammi Husky
       Super Smash Bros. Brawl © 2008 Nintendo and HAL Laboratory
     </Copyright>
@@ -161,7 +161,7 @@
   <PropertyGroup>
     <StartupObject>BrawlCrate.Program</StartupObject>
     <Version>30.0.4</Version>
-    <Authors>soopercool101, STulling, Onium, Bryan Moulton, BlackJax96, libertyernie, Sammi Husky</Authors>
+    <Authors>soopercool101, Simon381, Onium, Bryan Moulton, BlackJax96, libertyernie, Sammi Husky</Authors>
     <Company>BrawlCrate</Company>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
