--- a/BrawlLib/BrawlLib.csproj
+++ b/BrawlLib/BrawlLib.csproj
@@ -20,7 +20,7 @@
     <TargetFramework>net472</TargetFramework>
     <AssemblyTitle>BrawlCrateLib v0.30 Hotfix 4</AssemblyTitle>
     <Product>BrawlCrateLib</Product>
-    <Copyright>Copyright © 2018 - 2019 soopercool101, STulling, Onium
+    <Copyright>Copyright © 2018 - 2019 soopercool101, Simon381, Onium
 BrawlLib Copyright © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie, Sammi Husky</Copyright>
     <AssemblyVersion>0.30.0.4</AssemblyVersion>
     <FileVersion>0.30.0.4</FileVersion>
@@ -185,7 +185,7 @@ BrawlLib Copyright © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie, Sammi
     <PostBuildEvent />
     <PackageId>BrawlCrateLib</PackageId>
     <Company>BrawlCrateLib</Company>
-    <Authors>soopercool101, STulling, Onium, Bryan Moulton, BlackJax96, libertyernie, Sammi Husky</Authors>
+    <Authors>soopercool101, Simon381, Onium, Bryan Moulton, BlackJax96, libertyernie, Sammi Husky</Authors>
     <Version>30.0.4</Version>
   </PropertyGroup>
   <ItemGroup>
