--- a/BrawlCrate/BrawlCrate.csproj
+++ b/BrawlCrate/BrawlCrate.csproj
@@ -31,7 +31,7 @@
     <FileVersion>0.30.3.1</FileVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Platforms>AnyCPU;x64;x86</Platforms>
-    <Configurations>Debug;Release;Mono;Canary;Doxygen</Configurations>
+    <Configurations>Debug;Release;Mono;Canary;Doxygen;Documentation</Configurations>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DefineConstants>DEBUG</DefineConstants>
@@ -39,6 +39,12 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
+    <DefineConstants />
+    <Prefer32Bit>true</Prefer32Bit>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <PlatformTarget>x86</PlatformTarget>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Documentation|x86'">
     <DefineConstants />
     <Prefer32Bit>true</Prefer32Bit>
     <RunCodeAnalysis>false</RunCodeAnalysis>
@@ -87,6 +93,11 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Documentation|AnyCPU'">
+    <DefineConstants />
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Doxygen|AnyCPU'">
     <DefineConstants />
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -103,6 +114,13 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
+    <DefineConstants />
+    <PlatformTarget>x86</PlatformTarget>
+    <Prefer32Bit>true</Prefer32Bit>
+    <WarningLevel>4</WarningLevel>
+    <OutputPath>bin\$(Platform)\$(Configuration)\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Documentation|x86'">
     <DefineConstants />
     <PlatformTarget>x86</PlatformTarget>
     <Prefer32Bit>true</Prefer32Bit>
@@ -135,6 +153,11 @@
     <OutputPath>bin\$(Platform)\$(Configuration)\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <DefineConstants />
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Documentation|x64'">
     <DefineConstants />
     <PlatformTarget>AnyCPU</PlatformTarget>
     <Prefer32Bit>true</Prefer32Bit>
@@ -180,6 +203,13 @@
     <Prefer32Bit>true</Prefer32Bit>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Documentation|x64'">
+    <OutputPath>bin\$(Platform)\$(Configuration)\</OutputPath>
+    <DefineConstants />
+    <PlatformTarget>x64</PlatformTarget>
+    <Prefer32Bit>true</Prefer32Bit>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Doxygen|x64'">
     <OutputPath>bin\x64\Doxygen\</OutputPath>
     <DefineConstants />
@@ -217,6 +247,11 @@
     <WarningLevel>4</WarningLevel>
     <OutputPath>bin\$(Platform)\$(Configuration)\</OutputPath>
     <DocumentationFile></DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Documentation|AnyCPU'">
+    <WarningLevel>4</WarningLevel>
+    <OutputPath>bin\$(Platform)\$(Configuration)\</OutputPath>
+    <DocumentationFile />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Doxygen|AnyCPU'">
     <WarningLevel>0</WarningLevel>
@@ -385,6 +420,6 @@
     <Exec Command="if EXIST &quot;$(TargetDir)Updater.exe&quot; (&#xD;&#xA;  &quot;$(TargetDir)Updater.exe&quot; -killAll&#xD;&#xA;)&#xD;&#xA;if not '$(ConfigurationName)' == 'Doxygen' (&#xD;&#xA;  if not '$(ConfigurationName)' == 'Mono' (&#xD;&#xA;    cd $(SolutionDir)ColorSmash\&#xD;&#xA;    cargo build --release --target i686-pc-windows-gnu&#xD;&#xA;  )&#xD;&#xA;)&#xD;&#xA;if not '$(ConfigurationName)' == 'Debug' (&#xD;&#xA;  RD /S /Q &quot;$(TargetDir)&quot;&#xD;&#xA;)" />
   </Target>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition=" '$(Configuration)'!='Mono' ">
-    <Exec Command="cd &quot;$(TargetDir)&quot;&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(SolutionDir)BrawlLib\InternalDocumentation\*&quot; &quot;$(TargetDir)\InternalDocumentation\&quot; /Y /I /S&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(ProjectDir)API\Plugins\*&quot; &quot;$(TargetDir)\BrawlAPI\Plugins\&quot; /Y /I /S&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(ProjectDir)API\Loaders\*&quot; &quot;$(TargetDir)\BrawlAPI\Loaders\&quot; /Y /I /S&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(SolutionDir)Updater\$(OutDir)*.dll&quot; &quot;$(TargetDir)&quot; /Y /I&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(SolutionDir)Updater\$(OutDir)*.exe&quot; &quot;$(TargetDir)&quot; /Y /I&#xD;&#xA;if EXIST &quot;$(SolutionDir)ColorSmash\target\i686-pc-windows-gnu\release\color_smash.exe&quot; (&#xD;&#xA;  %25windir%25\system32\xcopy &quot;$(SolutionDir)ColorSmash\target\i686-pc-windows-gnu\release\color_smash.exe&quot; &quot;$(TargetDir)&quot; /Y /I&#xD;&#xA;)&#xD;&#xA;if not '$(ConfigurationName)' == 'Debug' (&#xD;&#xA;  del *.pdb&#xD;&#xA;  del *.config&#xD;&#xA;)&#xD;&#xA;if '$(ConfigurationName)' == 'Doxygen' (&#xD;&#xA;  RD /S /Q &quot;$(TargetDir)&quot;&#xD;&#xA;  RD /S /Q &quot;$(SolutionDir)docs\&quot;&#xD;&#xA;  cd &quot;$(SolutionDir)&quot;&#xD;&#xA;  doxygen -u &quot;$(SolutionDir)\doxygen.conf&quot;&#xD;&#xA;  doxygen &quot;$(SolutionDir)\doxygen.conf&quot;&#xD;&#xA;)" />
+    <Exec Command="cd &quot;$(TargetDir)&quot;&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(ProjectDir)API\Plugins\*&quot; &quot;$(TargetDir)\BrawlAPI\Plugins\&quot; /Y /I /S&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(ProjectDir)API\Loaders\*&quot; &quot;$(TargetDir)\BrawlAPI\Loaders\&quot; /Y /I /S&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(SolutionDir)Updater\$(OutDir)*.dll&quot; &quot;$(TargetDir)&quot; /Y /I&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(SolutionDir)Updater\$(OutDir)*.exe&quot; &quot;$(TargetDir)&quot; /Y /I&#xD;&#xA;if EXIST &quot;$(SolutionDir)ColorSmash\target\i686-pc-windows-gnu\release\color_smash.exe&quot; (&#xD;&#xA;  %25windir%25\system32\xcopy &quot;$(SolutionDir)ColorSmash\target\i686-pc-windows-gnu\release\color_smash.exe&quot; &quot;$(TargetDir)&quot; /Y /I&#xD;&#xA;)&#xD;&#xA;if not '$(ConfigurationName)' == 'Debug' (&#xD;&#xA;  del *.pdb&#xD;&#xA;  del *.config&#xD;&#xA;)&#xD;&#xA;if '$(ConfigurationName)' == 'Documentation' (&#xD;&#xA;  RD /S /Q &quot;$(TargetDir)&quot;&#xD;&#xA;)&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(SolutionDir)BrawlLib\InternalDocumentation\*&quot; &quot;$(TargetDir)\InternalDocumentation\&quot; /Y /I /S&#xD;&#xA;if '$(ConfigurationName)' == 'Doxygen' (&#xD;&#xA;  RD /S /Q &quot;$(TargetDir)&quot;&#xD;&#xA;  RD /S /Q &quot;$(SolutionDir)docs\&quot;&#xD;&#xA;  cd &quot;$(SolutionDir)&quot;&#xD;&#xA;  doxygen -u &quot;$(SolutionDir)\doxygen.conf&quot;&#xD;&#xA;  doxygen &quot;$(SolutionDir)\doxygen.conf&quot;&#xD;&#xA;)" />
   </Target>
 </Project>
