Auto decompress pacs now off by default

--- a/BrawlLib/Properties/Settings.settings
+++ b/BrawlLib/Properties/Settings.settings
@@ -24,7 +24,7 @@
       <Value Profile="(Default)">1</Value>
     </Setting>
     <Setting Name="AutoDecompressFighterPAC" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="AutoCompressFighterPCS" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
