--- a/BrawlCrate/Properties/Settings.settings
+++ b/BrawlCrate/Properties/Settings.settings
@@ -1,7 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)"
-              GeneratedClassNamespace="BrawlCrate.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="BrawlCrate.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="UpdateSettings" Type="System.Boolean" Scope="User">
@@ -22,7 +20,7 @@
     <Setting Name="ShowHex" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="ViewerSettings" Type="System.ModelEditorSettings" Scope="User">
+    <Setting Name="ViewerSettings" Type="BrawlLib.Internal.ModelEditorSettings" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="ViewerSettingsSet" Type="System.Boolean" Scope="User">
@@ -52,8 +50,7 @@
     <Setting Name="DiscordRPCEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="DiscordRPCNameType" Type="System.Nullable&lt;BrawlCrate.Discord.DiscordSettings.ModNameType&gt;"
-             Scope="User">
+    <Setting Name="DiscordRPCNameType" Type="System.Nullable&lt;BrawlCrate.Discord.DiscordSettings.ModNameType&gt;" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="DiscordRPCNameCustom" Type="System.String" Scope="User">
@@ -79,6 +76,12 @@
     </Setting>
     <Setting Name="APIAutoUpdate" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="CollisionEditorSettings" Type="BrawlCrate.UI.Collision_Editor.CollisionEditorSettings_Data" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="CollisionEditorSettingsSet" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
